fixing thumb spacing

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -365,7 +365,7 @@ blockquote {
     margin-top: 60px;
 }
 
-home-block .portfolio-thumbs img {
+.home-block .portfolio-thumbs img {
     margin: 0 5px 5px 0 !important;
 }
 
